--- a/TODO.txt
+++ b/TODO.txt
@@ -1,8 +1,5 @@
-TODO
-====
-
-* Get comment previews with attachments working.
-* Restrict uploading to users with proper permissions
-* Restrict uploading to specific node types
-* Restrict uploaded file/image sizes
-* Scale large images, ala inline.module
+ * @todo private file system support.
+ * @todo Upgrade path.
+ * @todo Single file attachments.
+ * @todo Inline images.
+ * @todo React to content type changes
