Setting form_state['storage'] in a builder/form_alter leads to immediate rebuilds of the form, which is just too much trouble. Also fixed failing required validation by building on a copy of the form.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,3 +1,4 @@
- * @todo Single file attachments.
- * @todo Inline images.
- * @todo React to content type changes
+Views integration
+Single file attachments.
+Inline images.
+React to content type changes
