--- a/translations/hu.po
+++ b/translations/hu.po
@@ -4,8 +4,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Comment Upload (6.x-1.0-alpha5)\n"
-"POT-Creation-Date: 2009-11-16 21:33+0000\n"
-"PO-Revision-Date: 2009-09-24 15:18+0000\n"
+"POT-Creation-Date: 2009-11-30 18:02+0000\n"
+"PO-Revision-Date: 2009-11-30 12:35+0000\n"
 "Language-Team: Hungarian\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
@@ -39,7 +39,7 @@ msgstr ""
 msgid "Attachments on comments"
 msgstr "Hozzászólások csatolmányai"
 msgid "Comment upload"
-msgstr "Fájlok csatolása hozzászólásokhoz"
+msgstr "Comment upload"
 msgid "Attach new file"
 msgstr "Új fájl csatolása"
 msgid "Attach"
@@ -60,14 +60,16 @@ msgid ""
 "The maximum upload size is %filesize. Only files with the following "
 "extensions may be uploaded: %extensions. "
 msgstr ""
-"A maximálisan feltölthető fájl méret %filesize. Csak a "
-"következő kiterjesztésű fájlok tölthetőek fel: %extensions. "
+"A legnagyobb feltölthető fájlméret %filesize. Csak a következő "
+"kiterjesztésű fájlok tölthetőek fel: %extensions. "
 msgid "Display as attachment"
 msgstr "Megjelenítés csatolmányként"
 msgid "Display as full image"
 msgstr "A teljes kép megjelenítése"
 msgid "Display via imagecache preset !preset"
-msgstr "Megjelenítés !preset ImageCache-beállítás segíŧségével"
+msgstr ""
+"Megjelenítés !preset <em>ImageCache</em> beállítás "
+"segíŧségével"
 msgid "Image attachments on comments"
 msgstr "Képek feltöltése hozzászólásokhoz"
 msgid ""
@@ -77,7 +79,7 @@ msgid ""
 msgstr ""
 "Ellenőrzési hiba. A fájl mérete túl nagy volt, ezért a "
 "műveletet egy kisebbel meg kell ismételni. Ha ez a hiba állandóan "
-"előjön, akkor érdemes felvenni a kapcsolatot a webhely "
+"jelentkezik, akkor érdemes felvenni a kapcsolatot a webhely "
 "üzemeltetőivel."
 msgid "upload files to comments"
 msgstr "fájlok feltöltése hozzászólásokhoz"
@@ -85,14 +87,14 @@ msgid "view files uploaded to comments"
 msgstr "hozzászólásokhoz feltöltött fájlok megtekintése"
 msgid "The {node}.nid of the comment the uploaded files is associated with."
 msgstr ""
-"A hozzászóláshoz tartozó {node}.nid, amellyel a feltöltött fájl "
-"össze lesznek kapcsolva"
+"A hozzászóláshoz tartozó {node}.nid, amellyel a feltöltött "
+"fájlok össze lesznek kapcsolva"
 msgid "The {comment}.cid associated with the uploaded file."
 msgstr "A {comment}.cid, amellyel a feltöltött fájl össze lesz kepcsolva"
 msgid ""
 "Whether the file should be visibly listed on the comment: yes(1) or "
 "no(0)."
-msgstr "Listázva legyen-e a csatolt fájl: igen(1) vagy nem(2)."
+msgstr "Listázva legyen-e a csatolt fájl: igen(1) vagy nem(0)."
 msgid ""
 "Weight of this upload in relation to other uploads - determines the "
 "order."
@@ -101,7 +103,7 @@ msgstr ""
 "megállapításában van jelentősége."
 msgid "The file ID from the Drupal 5 version, if applicable."
 msgstr ""
-"A fájl azonosítója  Drupal 5-höz készült változatból, ha "
+"A fájl azonosítója a Drupal 5-höz készült változatból, ha "
 "elérhető."
 msgid "Enables file attachments on comments"
 msgstr "Segítségével fájlokat lehet hozzászólásokhoz csatolni"
